Fixed issues for title hiding behind navbar when resized to smaller size and fixed ios tweaks and applications going to new line when page reloaded

--- a/css/about.css
+++ b/css/about.css
@@ -16,7 +16,8 @@
 
 .about {
     display: block;
-    padding-top: 5%;
+    margin: 0;
+    padding: 0;
     padding-right: 10%;
     padding-left: 10%;
 }
