--- a/css/projects.css
+++ b/css/projects.css
@@ -3,7 +3,7 @@
     padding-bottom: 0px;
     text-align: center;
     background: #1f1f1f url(../img/code.jpg) no-repeat center;
-    background-size: 100% 150%;
+    background-size: 100% 100%;
 }
 
 .intro-divider {
@@ -16,12 +16,10 @@
 
 .projects {
     display: block;
-    position: relative;
     margin: 0;
-    padding-top: 5%;
+    padding: 0;
     padding-right: 10%;
     padding-left: 10%;
-    overflow-x: hidden;
 }
 
 img {
@@ -43,7 +41,7 @@ img {
     padding: 0;
     margin-top: 20%;
     display: inline-block;
-    width:4%;
+    width: 3%;
     vertical-align: top;
 }
 
@@ -93,7 +91,7 @@ img {
     position: relative;
     float:center;
     display: inline-block;
-    width: 24%;
+    width: 23%;
     padding:0;
     vertical-align: top;
     overflow-x: hidden;
@@ -161,7 +159,7 @@ img {
     position: relative;
     float:center;
     display: inline-block;
-    width: 19%;
+    width: 18%;
     padding:0;
     vertical-align: top;
     overflow-x: hidden;
